fix(darken font colors): darken font colors to make the site more readable

--- a/src/components/education_sections.component.css
+++ b/src/components/education_sections.component.css
@@ -13,6 +13,7 @@
   display: flex;
   flex-direction: column;
   text-align: left;
+  color: var(--main_text_color);
 }
 
 .education img{
