--- a/src/components/home.component.css
+++ b/src/components/home.component.css
@@ -31,6 +31,7 @@
   flex-direction: column;
   text-align: left;
   padding-bottom: 1rem;
+  color: var(--main_text_color);
 }
 
 .current_prev_titles {
