--- a/src/components/work_experiences.component.css
+++ b/src/components/work_experiences.component.css
@@ -13,6 +13,7 @@
 }
 
 .title_and_company {
+  color: var(--auxilary_color);
   display: flex;
   align-items: flex-start;
   width: 100%;
@@ -20,6 +21,7 @@
 }
 
 .blurb {
+  color: var(--main_text_color);
   flex: 1;
   text-align: left;
   white-space: pre-line;
